gen/JasnyRegexParser.java
// Generated from /home/mateusz-nowacki/IdeaProjects/czytelny_regex/src/main/antlr4/org/example/grammar/JasnyRegexParser.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class JasnyRegexParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ZACZNIJ_OD=1, ZAKONCZ_NA=2, GRANICA_SLOWA=3, CYFRA=4, NIE_CYFRA=5, LITERA=6, 
		WIELKA_LITERA=7, MALA_LITERA=8, ZNAK_BIALY=9, NIE_ZNAK_BIALY=10, DOWOLNY_ZNAK=11, 
		SLOWO=12, NIE_SLOWO=13, TEKST=14, TAB=15, NOWA_LINIA=16, ZAKRES=17, ZNAK=18, 
		EMAIL=19, TELEFON=20, KOD_POCZTOWY=21, ADRES_IP=22, URL=23, DATA=24, GODZINA=25, 
		HEX=26, OPCJONALNIE=27, JEDEN_LUB_WIECEJ=28, ZERO_LUB_WIECEJ=29, DOKLADNIE=30, 
		OD=31, DO=32, MINIMUM=33, LENIWIE=34, GRUPA=35, GRUPA_NAZWANA=36, LUB=37, 
		JESLI_POTEM=38, JESLI_NIE_POTEM=39, JESLI_PRZED=40, JESLI_NIE_PRZED=41, 
		DOWOLNY_Z=42, ZADEN_Z=43, LPAREN=44, RPAREN=45, SEMICOLON=46, NUMBER=47, 
		STRING=48, WS=49;
	public static final int
		RULE_program = 0, RULE_expression = 1, RULE_charSetItem = 2, RULE_atom = 3, 
		RULE_quantifier = 4;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "expression", "charSetItem", "atom", "quantifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'ZACZNIJ_OD'", "'ZAKO\\u0143CZ_NA'", "'GRANICA_S\\u0141OWA'", 
			"'CYFRA'", "'NIE_CYFRA'", "'LITERA'", "'WIELKA_LITERA'", "'MA\\u0141A_LITERA'", 
			"'ZNAK_BIA\\u0141Y'", "'NIE_ZNAK_BIA\\u0141Y'", "'DOWOLNY_ZNAK'", "'S\\u0141OWO'", 
			"'NIE_S\\u0141OWO'", "'TEKST'", "'TAB'", "'NOWA_LINIA'", "'ZAKRES'", 
			"'ZNAK'", "'EMAIL'", "'TELEFON'", "'KOD_POCZTOWY'", "'ADRES_IP'", "'URL'", 
			"'DATA'", "'GODZINA'", "'HEX'", "'OPCJONALNIE'", "'JEDEN_LUB_WI\\u0118CEJ'", 
			"'ZERO_LUB_WI\\u0118CEJ'", "'DOK\\u0141ADNIE'", "'OD'", "'DO'", "'MINIMUM'", 
			"'LENIWIE'", "'GRUPA'", "'GRUPA_NAZWANA'", "'LUB'", "'JE\\u015ALI_POTEM'", 
			"'JE\\u015ALI_NIE_POTEM'", "'JE\\u015ALI_PRZED'", "'JE\\u015ALI_NIE_PRZED'", 
			"'DOWOLNY_Z'", "'\\u017BADEN_Z'", "'('", "')'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ZACZNIJ_OD", "ZAKONCZ_NA", "GRANICA_SLOWA", "CYFRA", "NIE_CYFRA", 
			"LITERA", "WIELKA_LITERA", "MALA_LITERA", "ZNAK_BIALY", "NIE_ZNAK_BIALY", 
			"DOWOLNY_ZNAK", "SLOWO", "NIE_SLOWO", "TEKST", "TAB", "NOWA_LINIA", "ZAKRES", 
			"ZNAK", "EMAIL", "TELEFON", "KOD_POCZTOWY", "ADRES_IP", "URL", "DATA", 
			"GODZINA", "HEX", "OPCJONALNIE", "JEDEN_LUB_WIECEJ", "ZERO_LUB_WIECEJ", 
			"DOKLADNIE", "OD", "DO", "MINIMUM", "LENIWIE", "GRUPA", "GRUPA_NAZWANA", 
			"LUB", "JESLI_POTEM", "JESLI_NIE_POTEM", "JESLI_PRZED", "JESLI_NIE_PRZED", 
			"DOWOLNY_Z", "ZADEN_Z", "LPAREN", "RPAREN", "SEMICOLON", "NUMBER", "STRING", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JasnyRegexParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JasnyRegexParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(JasnyRegexParser.EOF, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JasnyRegexParserVisitor ) return ((JasnyRegexParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(11); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(10);
				expression();
				}
				}
				setState(13); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 17420521439230L) != 0) );
			setState(15);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GroupExprContext extends ExpressionContext {
		public TerminalNode GRUPA() { return getToken(JasnyRegexParser.GRUPA, 0); }
		public TerminalNode LPAREN() { return getToken(JasnyRegexParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(JasnyRegexParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(JasnyRegexParser.SEMICOLON, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public QuantifierContext quantifier() {
			return getRuleContext(QuantifierContext.class,0);
		}
		public GroupExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JasnyRegexParserVisitor ) return ((JasnyRegexParserVisitor<? extends T>)visitor).visitGroupExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LookbehindExprContext extends ExpressionContext {
		public TerminalNode JESLI_PRZED() { return getToken(JasnyRegexParser.JESLI_PRZED, 0); }
		public TerminalNode LPAREN() { return getToken(JasnyRegexParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(JasnyRegexParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(JasnyRegexParser.SEMICOLON, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public LookbehindExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JasnyRegexParserVisitor ) return ((JasnyRegexParserVisitor<? extends T>)visitor).visitLookbehindExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LookaheadExprContext extends ExpressionContext {
		public TerminalNode JESLI_POTEM() { return getToken(JasnyRegexParser.JESLI_POTEM, 0); }
		public TerminalNode LPAREN() { return getToken(JasnyRegexParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(JasnyRegexParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(JasnyRegexParser.SEMICOLON, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public LookaheadExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JasnyRegexParserVisitor ) return ((JasnyRegexParserVisitor<? extends T>)visitor).visitLookaheadExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AtomExprContext extends ExpressionContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(JasnyRegexParser.SEMICOLON, 0); }
		public QuantifierContext quantifier() {
			return getRuleContext(QuantifierContext.class,0);
		}
		public AtomExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JasnyRegexParserVisitor ) return ((JasnyRegexParserVisitor<? extends T>)visitor).visitAtomExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OrExprContext extends ExpressionContext {
		public List<AtomContext> atom() {
			return getRuleContexts(AtomContext.class);
		}
		public AtomContext atom(int i) {
			return getRuleContext(AtomContext.class,i);
		}
		public TerminalNode SEMICOLON() { return getToken(JasnyRegexParser.SEMICOLON, 0); }
		public List<TerminalNode> LUB() { return getTokens(JasnyRegexParser.LUB); }
		public TerminalNode LUB(int i) {
			return getToken(JasnyRegexParser.LUB, i);
		}
		public OrExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JasnyRegexParserVisitor ) return ((JasnyRegexParserVisitor<? extends T>)visitor).visitOrExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NamedGroupExprContext extends ExpressionContext {
		public TerminalNode GRUPA_NAZWANA() { return getToken(JasnyRegexParser.GRUPA_NAZWANA, 0); }
		public TerminalNode STRING() { return getToken(JasnyRegexParser.STRING, 0); }
		public TerminalNode LPAREN() { return getToken(JasnyRegexParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(JasnyRegexParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(JasnyRegexParser.SEMICOLON, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public QuantifierContext quantifier() {
			return getRuleContext(QuantifierContext.class,0);
		}
		public NamedGroupExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JasnyRegexParserVisitor ) return ((JasnyRegexParserVisitor<? extends T>)visitor).visitNamedGroupExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CharSetExprContext extends ExpressionContext {
		public TerminalNode DOWOLNY_Z() { return getToken(JasnyRegexParser.DOWOLNY_Z, 0); }
		public TerminalNode LPAREN() { return getToken(JasnyRegexParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(JasnyRegexParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(JasnyRegexParser.SEMICOLON, 0); }
		public List<CharSetItemContext> charSetItem() {
			return getRuleContexts(CharSetItemContext.class);
		}
		public CharSetItemContext charSetItem(int i) {
			return getRuleContext(CharSetItemContext.class,i);
		}
		public QuantifierContext quantifier() {
			return getRuleContext(QuantifierContext.class,0);
		}
		public CharSetExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JasnyRegexParserVisitor ) return ((JasnyRegexParserVisitor<? extends T>)visitor).visitCharSetExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NegLookbehindExprContext extends ExpressionContext {
		public TerminalNode JESLI_NIE_PRZED() { return getToken(JasnyRegexParser.JESLI_NIE_PRZED, 0); }
		public TerminalNode LPAREN() { return getToken(JasnyRegexParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(JasnyRegexParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(JasnyRegexParser.SEMICOLON, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public NegLookbehindExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JasnyRegexParserVisitor ) return ((JasnyRegexParserVisitor<? extends T>)visitor).visitNegLookbehindExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NegCharSetExprContext extends ExpressionContext {
		public TerminalNode ZADEN_Z() { return getToken(JasnyRegexParser.ZADEN_Z, 0); }
		public TerminalNode LPAREN() { return getToken(JasnyRegexParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(JasnyRegexParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(JasnyRegexParser.SEMICOLON, 0); }
		public List<CharSetItemContext> charSetItem() {
			return getRuleContexts(CharSetItemContext.class);
		}
		public CharSetItemContext charSetItem(int i) {
			return getRuleContext(CharSetItemContext.class,i);
		}
		public QuantifierContext quantifier() {
			return getRuleContext(QuantifierContext.class,0);
		}
		public NegCharSetExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JasnyRegexParserVisitor ) return ((JasnyRegexParserVisitor<? extends T>)visitor).visitNegCharSetExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NegLookaheadExprContext extends ExpressionContext {
		public TerminalNode JESLI_NIE_POTEM() { return getToken(JasnyRegexParser.JESLI_NIE_POTEM, 0); }
		public TerminalNode LPAREN() { return getToken(JasnyRegexParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(JasnyRegexParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(JasnyRegexParser.SEMICOLON, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public NegLookaheadExprContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JasnyRegexParserVisitor ) return ((JasnyRegexParserVisitor<? extends T>)visitor).visitNegLookaheadExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expression);
		int _la;
		try {
			setState(125);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				_localctx = new AtomExprContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(17);
				atom();
				setState(19);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 12750684160L) != 0)) {
					{
					setState(18);
					quantifier();
					}
				}

				setState(21);
				match(SEMICOLON);
				}
				break;
			case 2:
				_localctx = new GroupExprContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(23);
				match(GRUPA);
				setState(24);
				match(LPAREN);
				setState(26); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(25);
					expression();
					}
					}
					setState(28); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 17420521439230L) != 0) );
				setState(30);
				match(RPAREN);
				setState(32);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 12750684160L) != 0)) {
					{
					setState(31);
					quantifier();
					}
				}

				setState(34);
				match(SEMICOLON);
				}
				break;
			case 3:
				_localctx = new NamedGroupExprContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(36);
				match(GRUPA_NAZWANA);
				setState(37);
				match(STRING);
				setState(38);
				match(LPAREN);
				setState(40); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(39);
					expression();
					}
					}
					setState(42); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 17420521439230L) != 0) );
				setState(44);
				match(RPAREN);
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 12750684160L) != 0)) {
					{
					setState(45);
					quantifier();
					}
				}

				setState(48);
				match(SEMICOLON);
				}
				break;
			case 4:
				_localctx = new OrExprContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(50);
				atom();
				setState(53); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(51);
					match(LUB);
					setState(52);
					atom();
					}
					}
					setState(55); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==LUB );
				setState(57);
				match(SEMICOLON);
				}
				break;
			case 5:
				_localctx = new LookaheadExprContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(59);
				match(JESLI_POTEM);
				setState(60);
				match(LPAREN);
				setState(62); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(61);
					expression();
					}
					}
					setState(64); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 17420521439230L) != 0) );
				setState(66);
				match(RPAREN);
				setState(67);
				match(SEMICOLON);
				}
				break;
			case 6:
				_localctx = new NegLookaheadExprContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(69);
				match(JESLI_NIE_POTEM);
				setState(70);
				match(LPAREN);
				setState(72); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(71);
					expression();
					}
					}
					setState(74); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 17420521439230L) != 0) );
				setState(76);
				match(RPAREN);
				setState(77);
				match(SEMICOLON);
				}
				break;
			case 7:
				_localctx = new LookbehindExprContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(79);
				match(JESLI_PRZED);
				setState(80);
				match(LPAREN);
				setState(82); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(81);
					expression();
					}
					}
					setState(84); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 17420521439230L) != 0) );
				setState(86);
				match(RPAREN);
				setState(87);
				match(SEMICOLON);
				}
				break;
			case 8:
				_localctx = new NegLookbehindExprContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(89);
				match(JESLI_NIE_PRZED);
				setState(90);
				match(LPAREN);
				setState(92); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(91);
					expression();
					}
					}
					setState(94); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 17420521439230L) != 0) );
				setState(96);
				match(RPAREN);
				setState(97);
				match(SEMICOLON);
				}
				break;
			case 9:
				_localctx = new CharSetExprContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(99);
				match(DOWOLNY_Z);
				setState(100);
				match(LPAREN);
				setState(102); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(101);
					charSetItem();
					}
					}
					setState(104); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==ZAKRES || _la==STRING );
				setState(106);
				match(RPAREN);
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 12750684160L) != 0)) {
					{
					setState(107);
					quantifier();
					}
				}

				setState(110);
				match(SEMICOLON);
				}
				break;
			case 10:
				_localctx = new NegCharSetExprContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(112);
				match(ZADEN_Z);
				setState(113);
				match(LPAREN);
				setState(115); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(114);
					charSetItem();
					}
					}
					setState(117); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==ZAKRES || _la==STRING );
				setState(119);
				match(RPAREN);
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 12750684160L) != 0)) {
					{
					setState(120);
					quantifier();
					}
				}

				setState(123);
				match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CharSetItemContext extends ParserRuleContext {
		public CharSetItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_charSetItem; }
	 
		public CharSetItemContext() { }
		public void copyFrom(CharSetItemContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CharSetRangeContext extends CharSetItemContext {
		public TerminalNode ZAKRES() { return getToken(JasnyRegexParser.ZAKRES, 0); }
		public List<TerminalNode> STRING() { return getTokens(JasnyRegexParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(JasnyRegexParser.STRING, i);
		}
		public CharSetRangeContext(CharSetItemContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JasnyRegexParserVisitor ) return ((JasnyRegexParserVisitor<? extends T>)visitor).visitCharSetRange(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CharSetLiteralContext extends CharSetItemContext {
		public TerminalNode STRING() { return getToken(JasnyRegexParser.STRING, 0); }
		public CharSetLiteralContext(CharSetItemContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JasnyRegexParserVisitor ) return ((JasnyRegexParserVisitor<? extends T>)visitor).visitCharSetLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CharSetItemContext charSetItem() throws RecognitionException {
		CharSetItemContext _localctx = new CharSetItemContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_charSetItem);
		try {
			setState(131);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING:
				_localctx = new CharSetLiteralContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				match(STRING);
				}
				break;
			case ZAKRES:
				_localctx = new CharSetRangeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				match(ZAKRES);
				setState(129);
				match(STRING);
				setState(130);
				match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
